--- a/main.html
+++ b/main.html
@@ -2,5 +2,20 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="/styles/main.css">
+        <title>kenopsia</title>
+        <link rel = "icon" href = 
+        "https://cdn.discordapp.com/avatars/277451712317620225/e8c0747c7ed296356ee972d429700402.webp?size=96" 
+                type = "image/x-icon">
+        <style>
+        h1 {text-align: center;}
+        </style>
     </head>
+    <body>
+        <h1>sex</h1>
+        <button type="button"
+onclick="document.getElementById('demo').innerHTML = Audio()">
+Click me to display Date and Time.</button>
+<p id="demo"></p>
+    </body>
 </html>
