--- a/main.html
+++ b/main.html
@@ -7,15 +7,13 @@
         <link rel = "icon" href = 
         "https://cdn.discordapp.com/avatars/277451712317620225/e8c0747c7ed296356ee972d429700402.webp?size=96" 
                 type = "image/x-icon">
-        <style>
-        h1 {text-align: center;}
-        </style>
     </head>
     <body>
+        <nav id="navbar">
+            <a> 
+                <span>About</span>
+            </a>
+        </nav>
         <h1>sex</h1>
-        <button type="button"
-onclick="document.getElementById('demo').innerHTML = Audio()">
-Click me to display Date and Time.</button>
-<p id="demo"></p>
     </body>
 </html>
