--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/styles/main.css">
         <title>kenopsia</title>
         <link rel = "icon" href = 
-        "https://cdn.discordapp.com/avatars/277451712317620225/e8c0747c7ed296356ee972d429700402.webp?size=96" 
+        "https://cdn.discordapp.com/avatars/277451712317620225/e8c0747c7ed296356ee972d429700402.webp?size=96" //replace later lol
                 type = "image/x-icon">
     </head>
     <body>
