new  css  dot com

--- a/main.html
+++ b/main.html
@@ -10,10 +10,14 @@
     </head>
     <body>
         <nav id="navbar">
-            <a> 
+            <a class="link item"> 
+                <i>
                 <span>About</span>
+                </i>
             </a>
         </nav>
-        <h1>sex</h1>
+        <section class="about">
+            stuff
+        </section>
     </body>
 </html>
