--- a/main.html
+++ b/main.html
@@ -1,23 +1,41 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="/styles/main.css">
-        <title>kenopsia</title>
-        <link rel = "icon" href = 
-        "https://cdn.discordapp.com/avatars/277451712317620225/e8c0747c7ed296356ee972d429700402.webp?size=96" //replace later lol
-                type = "image/x-icon">
-    </head>
-    <body>
-        <nav id="navbar">
-            <a class="link item"> 
-                <i>
-                <span>About</span>
-                </i>
-            </a>
-        </nav>
-        <section class="about">
-            stuff
+
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="/styles/main.css">
+    <title>kenopsia</title>
+    <link rel="icon"
+        href="/assets/img/icon.png"
+    type="image/x-icon">
+</head>
+
+<body>
+    <nav id="navbar">
+        <a class="link item active" href="/main.html">
+            <span>About</span>
+        </a>
+        <a class="link item" href="/art.html" 
+        <span>Art</span>
+        </a>
+        <a class="link item" href="/blog.html" 
+        <span>Blog</span>
+        </a>
+        <a class="link item" href="/second.html" 
+        <span>Contact</span>
+        </a>
+    </nav>
+    <div>
+        <section class="intro">
+            <picture> 
+                <source srcset="/assets/img/icon.png" type="image/png">
+                <img class="avatar" src="/assets/img/icon.png" alt="kenopsia">
+            </picture>
+            <h2>
+            im april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shit
+            </h2>
         </section>
-    </body>
+    </div>
+</body>
+
 </html>
