change to index for pages

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <a class="link item" href="/main.html">
+        <a class="link item" href="/index.html">
             <span>About</span>
         </a>
         <a class="link item" href="/art.html"
