--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>Hello<h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="/styles/main.css">
+    <title>kenopsia</title>
+    <link rel="icon"
+        href="/assets/img/icon.png"
+    type="image/x-icon">
+</head>
+
+<body>
+    <nav id="navbar">
+        <a class="link item active" href="/index.html">
+            <span>About</span>
+        </a>
+        <a class="link item" href="/art.html" 
+        <span>Art</span>
+        </a>
+        <a class="link item" href="/blog.html" 
+        <span>Blog</span>
+        </a>
+        <a class="link item" href="/second.html" 
+        <span>Contact</span>
+        </a>
+    </nav>
+    <div>
+        <section class="intro">
+            <picture> 
+                <source srcset="/assets/img/icon.png" type="image/png">
+                <img class="avatar" src="/assets/img/icon.png" alt="kenopsia">
+            </picture>
+            <h2>
+            im april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shit
+            </h2>
+        </section>
+    </div>
+</body>
+
+</html>
