--- a/art.html
+++ b/art.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav id="navbar">
-        <a class="link item" href="/main.html">
+        <a class="link item" href=/index.html">
             <span>About</span>
         </a>
         <a class="link item active" href="/art.html"
