goofy ahh slash

--- a/art.html
+++ b/art.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>kenopsia</title>
     <link rel="icon"
-        href="/assets/img/icon.png"
+        href="assets/img/icon.png"
         type="image/x-icon">
 </head>
 
 <body>
     <nav id="navbar">
-        <a class="link item" href=/index.html">
+        <a class="link item" href=index.html">
             <span>About</span>
         </a>
-        <a class="link item active" href="/art.html"
+        <a class="link item active" href="art.html"
             <span>Art</span>
         </a>
-        <a class="link item" href="/blog.html"
+        <a class="link item" href="blog.html"
             <span>Blog</span>
         </a>
-        <a class="link item" href="/second.html"
+        <a class="link item" href="second.html"
             <span>Contact</span>
         </a>
     </nav>
