--- a/blog.html
+++ b/blog.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>kenopsia</title>
     <link rel = "icon"
-        href="/assets/img/icon.png"
+        href="assets/img/icon.png"
             type = "image/x-icon">
 </head>
 <body>
     <nav id="navbar">
-        <a class="link item" href="/index.html">
+        <a class="link item" href="index.html">
             <span>About</span>
         </a>
-        <a class="link item" href="/art.html"
+        <a class="link item" href="art.html"
             <span>Art</span>
         </a>
-        <a class="link item active" href="/blog.html"
+        <a class="link item active" href="blog.html"
             <span>Blog</span>
         </a>
-        <a class="link item" href="/second.html"
+        <a class="link item" href="second.html"
             <span>Contact</span>
         </a>
     </nav>
