--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>kenopsia</title>
     <link rel="icon"
-        href="/assets/img/icon.png"
+        href="assets/img/icon.png"
     type="image/x-icon">
 </head>
 
 <body>
     <nav id="navbar">
-        <a class="link item active" href="/index.html">
+        <a class="link item active" href="index.html">
             <span>About</span>
         </a>
-        <a class="link item" href="/art.html" 
+        <a class="link item" href="art.html" 
         <span>Art</span>
         </a>
-        <a class="link item" href="/blog.html" 
+        <a class="link item" href="blog.html" 
         <span>Blog</span>
         </a>
-        <a class="link item" href="/second.html" 
+        <a class="link item" href="second.html" 
         <span>Contact</span>
         </a>
     </nav>
     <div>
         <section class="intro">
             <picture> 
-                <source srcset="/assets/img/icon.png" type="image/png">
-                <img class="avatar" src="/assets/img/icon.png" alt="kenopsia">
+                <source srcset="assets/img/icon.png" type="image/png">
+                <img class="avatar" src="assets/img/icon.png" alt="kenopsia">
             </picture>
             <h2>
             im april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shit
