hope this fixes something . .

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,8 @@
     </nav>
     <div>
         <section class="intro">
-            here where i post my thoughts and talk about art
+            here where i would post my thoughts and talk about art
+            if the blog was done
         </section>
     </div>
 </html>
