--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         <span>Contact</span>
         </a>
     </nav>
-    <div>
+    <div class="content">
         <section class="intro">
             <picture> 
                 <source srcset="assets/img/icon.png" type="image/png">
                 <img class="avatar" src="assets/img/icon.png" alt="kenopsia">
             </picture>
             <h2>
-            im april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shitim april kenopsia i love doing shit
+                Hello, I'm Kenopsia.
             </h2>
+            <p>heyyy</p>
         </section>
     </div>
