--- a/art.html
+++ b/art.html
@@ -25,7 +25,7 @@
             <span>Contact</span>
         </a>
     </nav>
-    <div>
+    <div class="content">
         <section class="intro">
             bit of my art
         </section>
