--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
             <span>Contact</span>
         </a>
     </nav>
-    <div>
+    <div class="content">
         <section class="intro">
             here where i would post my thoughts and talk about art
             if the blog was done
