--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img class="avatar" src="assets/img/icon.png" alt="kenopsia">
             </picture>
             <h2>
-                Hello, I'm Kenopsia.
+                I'm April Kenopsia 
             </h2>
             <p>heyyy</p>
         </section>
