--- a/second.html
+++ b/second.html
@@ -23,7 +23,7 @@
             <span>Contact</span>
         </a>
     </nav>
-    <div>
+    <div class="content">
         <section class="intro">
             find me
         </section>
