fix alignment and become happy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>kenopsia</title>
     <link rel="icon"
         href="assets/img/icon.png"
@@ -31,9 +31,20 @@
                 <source srcset="assets/img/icon.png" type="image/png">
                 <img class="avatar" src="assets/img/icon.png" alt="kenopsia">
             </picture>
+            <div style="width: 500px;">
             <h2>
                 I'm April Kenopsia 
             </h2>
-            <p>heyyy</p>
+            <p>
+                lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur 
+            </p>
+        </div>
         </section>
     </div>
+    <footer>
+        <p>
+            &copy; 2022 april kenopsia
+        </p>
+    </footer>
+</body>
+</html>
