--- a/second.html
+++ b/second.html
@@ -2,7 +2,7 @@
 <html lang="en">       
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>kenopsia</title>
     <link rel = "icon"
         href="assets/img/icon.png"
@@ -28,4 +28,5 @@
             find me
         </section>
     </div>
+    </body>
 </html>
