scuffed gallery, fix not closing brackets add find

--- a/art.html
+++ b/art.html
@@ -26,10 +26,31 @@
         </a>
     </nav>
     <div class="content">
-        <section class="intro">
-            bit of my art
+        <section style="width: 1200px;">
+            <h1 style="justify-content: center; display: flex;">Art</h1>
+            <div id="gallery">
+                <picture style="width: 1400px;">
+                    <img src="assets/img/art/art1.png" class:="img" alt="art1" width="600" >
+                    <img src="assets/img/art/art2.png" class:="img" alt="art2" width="400" >
+                    <img src="assets/img/art/art3.png" class:="img" alt="art3" width="400" >
+                    <img src="assets/img/art/art4.png" class:="img" alt="art4" width="500" >
+                    <img src="assets/img/art/art5.png" class:="img" alt="art5" width="510" >
+                    <img src="assets/img/art/art6.png" class:="img" alt="art6" width="510" >
+                    <img src="assets/img/art/art7.png" class:="img" alt="art7" width="400" >
+                    <img src="assets/img/art/art8.png" class:="img" alt="art8" width="400" >
+                    <img src="assets/img/art/art9.png" class:="img" alt="art9" width="400" >
+                    <img src="assets/img/art/art10.png" class:="img" alt="art10" width="400" >
+                    <img src="assets/img/art/art11.png" class:="img" alt="art11" width="400" >
+                    <img src="assets/img/art/art12.png" class:="img" alt="art12" width="400" >
+                </picture>
+                </div>
         </section>
     </div>
+    <footer>
+        <p>
+            &copy;  2022 april kenopsia
+        </p>
+    </footer>
 </body>
 
 </html>
