--- a/blog.html
+++ b/blog.html
@@ -13,13 +13,13 @@
         <a class="link item" href="index.html">
             <span>About</span>
         </a>
-        <a class="link item" href="art.html"
+        <a class="link item" href="art.html">
             <span>Art</span>
         </a>
-        <a class="link item active" href="blog.html"
+        <a class="link item active" href="blog.html">
             <span>Blog</span>
         </a>
-        <a class="link item" href="second.html"
+        <a class="link item" href="second.html">
             <span>Contact</span>
         </a>
     </nav>
@@ -29,5 +29,10 @@
             if the blog was done
         </section>
     </div>
+    <footer>
+        <p>
+            &copy;  2022 april kenopsia
+        </p>
+    </footer>
     </body>
 </html>
