--- a/second.html
+++ b/second.html
@@ -13,20 +13,25 @@
         <a class="link item" href="index.html">
             <span>About</span>
         </a>
-        <a class="link item" href="art.html"
+        <a class="link item" href="art.html">
             <span>Art</span>
         </a>
-        <a class="link item" href="blog.html"
+        <a class="link item" href="blog.html">
             <span>Blog</span>
         </a>
-        <a class="link item active" href="second.html"
+        <a class="link item active" href="second.html">
             <span>Contact</span>
         </a>
     </nav>
     <div class="content">
         <section class="intro">
-            find me
+            💼 april@kenopsia.gay
         </section>
     </div>
+    <footer>
+        <p>
+            &copy;  2022 april kenopsia
+        </p>
+    </footer>
     </body>
 </html>
