--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <a class="link item active" href="index.html">
             <span>About</span>
         </a>
-        <a class="link item" href="art.html" 
+        <a class="link item" href="art.html">
         <span>Art</span>
         </a>
-        <a class="link item" href="blog.html" 
+        <a class="link item" href="blog.html">
         <span>Blog</span>
         </a>
-        <a class="link item" href="second.html" 
+        <a class="link item" href="second.html">
         <span>Contact</span>
         </a>
     </nav>
@@ -43,7 +43,7 @@
     </div>
     <footer>
         <p>
-            &copy; 2022 april kenopsia
+            &copy;  2022 april kenopsia
         </p>
     </footer>
 </body>
