--- a/second.html
+++ b/second.html
@@ -24,8 +24,10 @@
         </a>
     </nav>
     <div class="content">
-        <section class="intro">
-            💼 april@kenopsia.gay
+        <section style="display:grid">
+            <p class="socials">💼 april@kenopsia.gay</p>
+            <p class="socials">☁ k1333</p>
+            <p class="socials">📷 @princes2eye</p>
         </section>
     </div>
     <footer>
