replace placeholder with random  ...

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 I'm April Kenopsia 
             </h2>
             <p>
-                lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur 
+                I am a creator of things, i like to talk about stuff and learn cool ones, questionable artist and decent music enjoyer
             </p>
         </div>
         </section>
